feat(api): :sparkles: create route to create question
